<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRUD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="txt_usuario">Usuário</string>
    <string name="txt_senha">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="login_manterconectado">Manter conectado</string>
    <string name="valida_usuario">Usuario obrigatorio</string>
    <string name="valida_senha">Senha é obrigatoria.</string>
    <string name="msg_error_Login">Usuário e/ou senha invalidos !</string>
    <string name="title_activity_cad_usuario">CadUsuarioActivity</string>
    <string name="cadUsuario_txtNome">Nome:</string>
    <string name="cadUsuario_txtLogin">Login:</string>
    <string name="cadUsuario_txtSenha">Senha:</string>
    <string name="txt_campo_obrigatorio">Campo obrigatorio.</string>
    <string name="mensagem_atualizar">Registro Atualizado com Sucesso!</string>
    <string name="mensagem_cadastrar">Registro Cadastrado com sucesso!</string>
    <string name="mensagem_error">Error ao salvar!</string>
    <string name="txt_menu_slavar">Salvar</string>
    <string name="txt_menu_excluir">Excluir</string>
    <string name="txt_menu_sair">Sair</string>
    <string name="title_activity_list_usuario">Lista de Usuarios</string>
    <string name="txt_listar_usuarios">Listar Usuários</string>

</resources>
