<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            style="@style/format_cadUsuario"
            android:text="@string/cadUsuario_txtNome"/>

        <EditText
            android:id="@+id/cadUsuario_edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>


        <TextView
            style="@style/format_cadUsuario"
            android:text="@string/cadUsuario_txtLogin"/>

        <EditText
            android:id="@+id/cadUsuario_edtlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>


        <TextView
            style="@style/format_cadUsuario"
            android:text="@string/cadUsuario_txtSenha"/>

        <EditText
            android:id="@+id/cadUsuario_edtsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>


     </LinearLayout>


</ScrollView>
